// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ordered list Default renders correctly 1`] = `
<jest>
  <ol
    class="ecl-ordered-list"
  >
    <li
      class="ecl-ordered-list__item ecl-ordered-list__item--first"
    >
      Jobs, growth and investment
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          Investment Plan for Europe: the Juncker Plan
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          European Semester
        </li>
      </ol>
    </li>
    <li
      class="ecl-ordered-list__item"
    >
      Digital single market
    </li>
    <li
      class="ecl-ordered-list__item ecl-ordered-list__item--last"
    >
      Energy union and climate
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          Security, solidarity and trust
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          A fully-integrated internal energy market
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          Energy efficiency
        </li>
      </ol>
    </li>
  </ol>
</jest>
`;

exports[`Ordered list Default renders correctly with divider variant 1`] = `
<jest>
  <ol
    class="ecl-ordered-list ecl-ordered-list--divider"
  >
    <li
      class="ecl-ordered-list__item ecl-ordered-list__item--first"
    >
      <a
        class="ecl-link"
        href="/example"
      >
        Jobs, growth and investment
      </a>
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            Investment Plan for Europe: the Juncker Plan
          </a>
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            European Semester
          </a>
        </li>
      </ol>
    </li>
    <li
      class="ecl-ordered-list__item"
    >
      <a
        class="ecl-link"
        href="/example"
      >
        Digital single market
      </a>
    </li>
    <li
      class="ecl-ordered-list__item ecl-ordered-list__item--last"
    >
      <a
        class="ecl-link"
        href="/example"
      >
        Energy union and climate
      </a>
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            Security, solidarity and trust
          </a>
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            A fully-integrated internal energy market
          </a>
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            Energy efficiency
          </a>
        </li>
      </ol>
    </li>
  </ol>
</jest>
`;

exports[`Ordered list Default renders correctly with extra attributes 1`] = `
<jest>
  <ol
    class="ecl-ordered-list"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <li
      class="ecl-ordered-list__item ecl-ordered-list__item--first"
    >
      Jobs, growth and investment
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          Investment Plan for Europe: the Juncker Plan
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          European Semester
        </li>
      </ol>
    </li>
    <li
      class="ecl-ordered-list__item"
    >
      Digital single market
    </li>
    <li
      class="ecl-ordered-list__item ecl-ordered-list__item--last"
    >
      Energy union and climate
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          Security, solidarity and trust
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          A fully-integrated internal energy market
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          Energy efficiency
        </li>
      </ol>
    </li>
  </ol>
</jest>
`;

exports[`Ordered list Default renders correctly with extra class names 1`] = `
<jest>
  <ol
    class="ecl-ordered-list custom-class custom-class--test"
  >
    <li
      class="ecl-ordered-list__item ecl-ordered-list__item--first"
    >
      Jobs, growth and investment
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          Investment Plan for Europe: the Juncker Plan
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          European Semester
        </li>
      </ol>
    </li>
    <li
      class="ecl-ordered-list__item"
    >
      Digital single market
    </li>
    <li
      class="ecl-ordered-list__item ecl-ordered-list__item--last"
    >
      Energy union and climate
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          Security, solidarity and trust
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          A fully-integrated internal energy market
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          Energy efficiency
        </li>
      </ol>
    </li>
  </ol>
</jest>
`;

exports[`Ordered list Default renders correctly with no-marker variant 1`] = `
<jest>
  <ol
    class="ecl-ordered-list ecl-ordered-list--no-marker"
  >
    <li
      class="ecl-ordered-list__item ecl-ordered-list__item--first"
    >
      <a
        class="ecl-link"
        href="/example"
      >
        Jobs, growth and investment
      </a>
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            Investment Plan for Europe: the Juncker Plan
          </a>
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            European Semester
          </a>
        </li>
      </ol>
    </li>
    <li
      class="ecl-ordered-list__item"
    >
      <a
        class="ecl-link"
        href="/example"
      >
        Digital single market
      </a>
    </li>
    <li
      class="ecl-ordered-list__item ecl-ordered-list__item--last"
    >
      <a
        class="ecl-link"
        href="/example"
      >
        Energy union and climate
      </a>
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            Security, solidarity and trust
          </a>
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            A fully-integrated internal energy market
          </a>
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            Energy efficiency
          </a>
        </li>
      </ol>
    </li>
  </ol>
</jest>
`;
